# clawglance

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bridge.py  cyd_partitions.csv  partitions.csv  platformio.ini  sdkconfig.cyd-st7789.defaults  sdkconfig.cyd.defaults  sdkconfig.cyd35.defaults  sdkconfig.defaults  sdkconfig.esp32s3  sdkconfig.s3-waveshare.defaults
.claude/skills/serial-monitor/: SKILL.md
components/cyd_bsp/: CMakeLists.txt  cyd_bsp.c  cyd_lcd.c  cyd_lcd.h  cyd_lvgl.c  cyd_pins.h  cyd_touch.c  cyd_touch.h
components/lcd_bsp/: CMakeLists.txt
components/lcd_bsp/include/: bsp_board.h  bsp_i2c.h
components/lv_port/: CMakeLists.txt
components/lv_port/include/: lv_port_disp.h  lv_port_fs.h  lv_port_indev.h  lvgl_init.h
components/lvgl/: CMakeLists.txt
components/lvgl/include/: lv_demo_conf.h
components/lvgl/lvgl/docs/get-started/os/: rt-thread.md
components/lvgl/lvgl/env_support/cmsis-pack/: lv_conf_cmsis.h
components/lvgl/lvgl/env_support/rt-thread/: lv_rt_thread_port.c
components/lvgl/lvgl/examples/porting/: lv_port_disp_template.c  lv_port_disp_template.h
components/lvgl/lvgl/src/: lv_conf_internal.h
components/pwm/: CMakeLists.txt
components/s3w_bsp/: CMakeLists.txt  s3w_bsp.c  s3w_expander.c  s3w_expander.h  s3w_lcd.c  s3w_lcd.h  s3w_lvgl.c  s3w_pins.h  s3w_touch.c  s3w_touch.h
main/: CMakeLists.txt  Kconfig.projbuild  app_state.h  config.h  lobster_icon.c  lobster_icon_lg.c  main.c  oc_client.c  oc_client.h  ui_screens.c  ui_screens.h  wifi_mgr.c  wifi_mgr.h
plugin-clawglance/: index.ts  openclaw.plugin.json  package.json
sim/: .gitignore  Makefile  README.md  lv_conf.h  sim_main.c
tools/: erase_nvs.py  serial_monitor.py
